src/components/all.sass
@import "~bulma/sass/utilities/initial-variables"
@import url('https://fonts.googleapis.com/css?family=Lora&display=swap');
@import url('https://fonts.googleapis.com/css?family=Cabin:500,500i&display=swap');

// Config vars
// Kaldi logo brand color: #FD461E
$kaldi-red: #D64000 
$kaldi-red-invert: #fff
 
$primary: $kaldi-red 
$primary-invert: $kaldi-red-invert 
$body-color: #333 
$black: #2b2523 
$pink: #E86A92 
$yellow: #ffdb97 

.content,
  a
    border-bottom: solid 4px $pink 
    padding-bottom: 2px 
    margin-bottom: 4px 
    a:hover 
      border-bottom: solid 2px $pink 
      padding-bottom: 4px 

a:hover 
  color: $pink 
  
body 
  font-family: 'Cabin', sans-serif

h1, h2, h3, h4, h5, h6 
  font-family: 'Lora', serif
  font-weight: normal 

.header
  h1
    color: $yellow !important

.navbar .navbar-menu
  box-shadow:none !important
  a:hover, a:active
    border-bottom: solid 2px $pink 
    color: $pink

.content
  p
    a
      color: $black !important
    a:hover
      color: $pink !important

.content .taglist
  list-style: none
  margin-bottom: 0
  margin-left: 0
  margin-right: 1.5rem
  margin-top: 1.5rem
  display: flex
  flex-wrap: wrap
  justify-content: left
  align-items: center
  li
    padding: 0 2rem 1rem 0
    margin-bottom: 1.5rem
    margin-top: 0

// Helper Classes
.full-width-image-container
  width: 100vw
  height: 400px
  position: relative
  left: 50%
  right: 50%
  margin: 2em -50vw
  background-size: cover
  background-position: bottom
  display: flex
  justify-content: center
  align-items: center

.full-width-image
    width: 100vw
    height: 400px
    background-size: cover
    background-position: bottom
    display: flex
    justify-content: center
    align-items: center

.btn
    display: inline-block
    padding: 12px 16px 10px
    font-size: 18px
    font-size: 1rem
    line-height: 1.25
    background-color: #fff
    border-radius: .25rem
    text-decoration: none
    font-weight: 700
    color: #CC3700
    text-align: center
    -webkit-box-shadow: inset 0 0 0 2px #CC3700
    box-shadow: inset 0 0 0 2px #f40
    -webkit-transition: all .15s ease
    transition: all .15s ease

.margin-top-0
  margin-top: 0 !important

.navbar-item .icon
  color: $primary
// Override for use of svg's from https://simpleicons.org/
.icon svg
  width: 1.5rem
  height: 1.5rem
  fill: currentColor
.navbar-brand .navbar-item.logo
  padding: 0 1rem
footer.footer
  padding: 3rem 0rem 0rem
  background-color: transparent

//Menu overrides
$menu-item-color: $white-ter
$menu-item-hover-color: $black !important
$menu-item-hover-background-color: $black
$menu-item-active-color: $kaldi-red-invert
$menu-item-active-background-color:	$kaldi-red-invert
$menu-list-border-left: 1px solid $kaldi-red-invert
$menu-label-color: $white-ter


.menu-label
  font-size: 1em !important
  text-align: left
.menu-list
  list-style: none !important
  text-align: left
.social
  padding: 2em
.social a
    padding: .5em .5em .3em .5em
    border-radius: 1em
    background-color: $white-ter
    margin: .5em
    width: 1em
    height: 1em
    vertical-align: middle
    display: inline

// blog roll
.blog-list-item.is-featured
  background-color: #d6400033;
.blog-list-item header
  display: flex;
  margin-bottom: 1em;
.blog-list-item .featured-thumbnail
  flex-basis: 35%;
  margin: 0 1.5em 0 0;

.contact
  p
    color: white
    margin-bottom: 0.5em;
    text-align: right
    
    a
      color: white 
    a:hover
      color: $pink

.portfolio-item
  h1
    font-size: 3em
  a
    color: $black
  a:hover
    color: $pink

@import "~bulma"

// responsiveness
+tablet-only
  .blog-list-item .featured-thumbnail
    flex-basis: 50%;

+mobile
  .blog-list-item header
    display: block
  .blog-list-item .featured-thumbnail
    text-align: center;
    max-width: 70%;
    margin: 0 0 1em;

